2.3.4
-----
1. Always check if an items duration is valid before using to calculate
   selection duration.
2. Ignore clicks on artist, album, etc. subtitles in queue when selection
   active.
3. Remove mapping for TVHeadend icon, as plugin now provides its own.
4. Fix check for all items having same icon/image.
5. Fix colour of player status icons for light themes with coloured toolbars.

2.3.3
-----
1. Fix blank queue, etc.
2. Remove longpress to open advanced search, breaks back button?

2.3.2
-----
 1. 'Now playing' should update on year change.
 2. Allow certain shortcuts (e.g. inc/dec volume) to repeat every 300ms when
    pressed.
 3. Show buttons for application, player, and server settings in 'Settings'
    dialog toolbar if there is space.
 4. Better player settings, server settings, application settings, and advanced
    search icons.
 5. Remove (?) button from 'Information' dialog toolbar. Links to user guide,
    but this is too out of date for such a prominant link.
 6. Add mouse-wheel support to volume sliders in 'Manage players' dialog and
    volume popup for synced players.
 7. Prevent flash of light background when using 'Extra' item with dark themes.
 8. Fix clipping of some icons in menus.
 9. Show total duration of selected items, if items have duration.
10. Add GENRENAME, GENREID, and YEAR custom action placeholders.
11. Intercept genre list from 'More', and replace with Material's category
    selection.
12. Long-press on power buttons in players menu to show sleep settings for
    player.
13. Fix closing zoomed now-playing image causing browse to navigate back.
14. Add hover effect to queue duration, indicating that it is clickable.
15. Only look for local files if track URLs starts with file://
16. Only set new source in iframe page if link is not an anchor.
17. Long-press on search button to go straight to advanced search.
18. Need to split (e.g.) trackartist_ids if present, even if trackartist is not
    present.

2.3.1
-----