@@ -7,6 +7,8 @@
 3. Remove mapping for TVHeadend icon, as plugin now provides its own.
 4. Fix check for all items having same icon/image.
 5. Fix colour of player status icons for light themes with coloured toolbars.
+6. Fix colour of SVG icons in toolbars of fullscreen dialogs when using light
+   themes with coloured toolbars.
 
 2.3.3
 -----
